✨ Binary backup for Redis (RDB) and Mongo (mongodump archive)
backupToFile now covers all engines: SQL text for pg/mysql, native binary
dumps for redis/mongo fetched via DockerClient.getArchiveFile. Dumps land
in /tmp (writable layer) -- the archive API can't read tmpfs/volume mounts,
which is why redis uses --rdb /tmp not SAVE. Mongo readiness now
authenticates, since its init server binds TCP before the real one.